--- a/dexmaker-mockito-tests/build.gradle
+++ b/dexmaker-mockito-tests/build.gradle
@@ -1,32 +1,20 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
-apply plugin: 'com.android.library'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 25
+    buildToolsVersion "25.0.0"
 
-    android {
-        lintOptions {
-            disable 'InvalidPackage'
-        }
+    lintOptions {
+        abortOnError false
     }
 
     defaultConfig {
-        minSdkVersion 8
-        targetSdkVersion 27
+        applicationId "com.android.dexmaker.mockito.tests"
+        minSdkVersion 25
+        targetSdkVersion 25
         versionName VERSION_NAME
 
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
 }
 
@@ -36,10 +24,9 @@ repositories {
 }
 
 dependencies {
-    compileOnly project(':dexmaker-mockito')
-    androidTestImplementation project(':dexmaker-mockito')
+    compile project(':dexmaker')
+    compile project(':dexmaker-mockito')
 
-    implementation 'com.android.support.test:runner:0.5'
-    implementation 'junit:junit:4.12'
-    api 'org.mockito:mockito-core:2.16.0', { exclude group: 'net.bytebuddy' }
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'junit:junit:4.12'
 }
