--- a/dexmaker-tests/build.gradle
+++ b/dexmaker-tests/build.gradle
@@ -1,41 +1,27 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
 apply plugin: 'com.android.application'
-
-android {
-    compileSdkVersion 27
-    buildToolsVersion '27.0.3'
-
-    defaultConfig {
-        applicationId 'com.linkedin.dexmaker'
-        minSdkVersion 8
-        targetSdkVersion 27
-        versionCode 1
-        versionName VERSION_NAME
-
-        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
-    }
-}
 
 repositories {
     jcenter()
-    google()
+}
+
+android {
+    compileSdkVersion 25
+    buildToolsVersion '25.0.0'
+
+    defaultConfig {
+        applicationId "com.linkedin.dexmaker"
+        minSdkVersion 8
+        targetSdkVersion 25
+        versionCode 1
+        versionName VERSION_NAME
+
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    }
 }
 
 dependencies {
-    implementation project(":dexmaker")
+    compile project(":dexmaker")
 
-    //noinspection GradleDependency
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'junit:junit:4.12'
+    androidTestCompile 'com.android.support.test:runner:0.5'
+    androidTestCompile 'junit:junit:4.12'
 }
