--- a/dexmaker/build.gradle
+++ b/dexmaker/build.gradle
@@ -1,15 +1,3 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
 apply plugin: 'java'
 apply from: "$rootDir/gradle/publishing.gradle"
 
@@ -23,10 +11,6 @@ repositories {
     jcenter()
 }
 
-tasks.withType(JavaCompile) {
-    options.compilerArgs += ["-Xep:StringSplitter:OFF"]
-}
-
 dependencies {
-    implementation 'com.jakewharton.android.repackaged:dalvik-dx:7.1.0_r7'
+    compile 'com.jakewharton.android.repackaged:dalvik-dx:7.1.0_r7'
 }
