--- a/dexmaker-mockito-tests/build.gradle
+++ b/dexmaker-mockito-tests/build.gradle
@@ -13,17 +13,18 @@ apply plugin: "net.ltgt.errorprone"
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     android {
         lintOptions {
             disable 'InvalidPackage'
+            disable 'NewApi'
         }
     }
 
     defaultConfig {
         minSdkVersion 8
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionName VERSION_NAME
 
         testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
@@ -41,5 +42,5 @@ dependencies {
 
     implementation 'com.android.support.test:runner:0.5'
     implementation 'junit:junit:4.12'
-    api 'org.mockito:mockito-core:2.16.0', { exclude group: 'net.bytebuddy' }
+    api 'org.mockito:mockito-core:2.19.0', { exclude group: 'net.bytebuddy' }
 }
