--- a/dexmaker-mockito/build.gradle
+++ b/dexmaker-mockito/build.gradle
@@ -1,15 +1,3 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
 apply plugin: 'java'
 apply from: "$rootDir/gradle/publishing.gradle"
 
@@ -24,7 +12,7 @@ repositories {
 }
 
 dependencies {
-    implementation project(':dexmaker')
+    compile project(":dexmaker")
 
-    implementation 'org.mockito:mockito-core:2.19.0', { exclude group: 'net.bytebuddy' }
+    compile 'org.mockito:mockito-core:2.15.0', { exclude group: "net.bytebuddy" }
 }
