Update dexmaker to latest master.
The new commit hash in upstream is
c58ffebcbb2564c7d1fa6fb58b48f351c330296d.

Bug: 123984854
Test: CtsMockingTestCases
CtsInlineMockingTestCases
CtsMockingDebuggableTestCases
CtsExtendedMockingTestCases

Change-Id: I4fe7359309bd043510dab13ee74cd658943b9d7a

--- a/dexmaker-tests/build.gradle
+++ b/dexmaker-tests/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation project(":dexmaker")
 
     //noinspection GradleDependency
-    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'androidx.test:runner:1.1.1'
     androidTestImplementation 'junit:junit:4.12'
 }
