--- a/dexmaker-mockito-tests/build.gradle
+++ b/dexmaker-mockito-tests/build.gradle
@@ -40,7 +40,7 @@ dependencies {
     compileOnly project(':dexmaker-mockito')
     androidTestImplementation project(':dexmaker-mockito')
 
-    implementation 'androidx.test:runner:1.1.1'
+    implementation 'com.android.support.test:runner:0.5'
     implementation 'junit:junit:4.12'
-    api 'org.mockito:mockito-core:2.25.0', { exclude group: 'net.bytebuddy' }
+    api 'org.mockito:mockito-core:2.21.0', { exclude group: 'net.bytebuddy' }
 }
