--- a/dexmaker-tests/build.gradle
+++ b/dexmaker-tests/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation project(":dexmaker")
 
     //noinspection GradleDependency
-    androidTestImplementation 'androidx.test:runner:1.1.1'
+    androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'junit:junit:4.12'
 }
