--- a/dexmaker-mockito-inline-tests/build.gradle
+++ b/dexmaker-mockito-inline-tests/build.gradle
@@ -1,20 +1,7 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
-}
-
-apply plugin: "net.ltgt.errorprone"
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 32
 
     android {
         lintOptions {
@@ -25,8 +12,7 @@ android {
 
     defaultConfig {
         minSdkVersion 28
-        targetSdkVersion 28
-        versionName VERSION_NAME
+        targetSdkVersion 32
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
@@ -38,17 +24,12 @@ android {
     }
 }
 
-repositories {
-    jcenter()
-    google()
-}
-
 dependencies {
     implementation project(':dexmaker-mockito-tests')
     compileOnly project(':dexmaker-mockito-inline')
     androidTestImplementation project(':dexmaker-mockito-inline')
 
-    implementation 'junit:junit:4.12'
-    implementation 'com.android.support.test:runner:1.0.2'
-    api 'org.mockito:mockito-core:2.25.0', { exclude group: 'net.bytebuddy' }
+    implementation 'junit:junit:4.13.2'
+    implementation 'androidx.test:runner:1.4.0'
+    api 'org.mockito:mockito-core:2.28.2', { exclude group: 'net.bytebuddy' }
 }
