--- a/dexmaker-mockito/build.gradle
+++ b/dexmaker-mockito/build.gradle
@@ -1,30 +1,26 @@
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
-    }
+plugins {
+    id("net.ltgt.errorprone") version "1.3.0"
 }
 
-apply plugin: "net.ltgt.errorprone"
-apply plugin: 'java'
-apply from: "$rootDir/gradle/publishing.gradle"
-
-version = VERSION_NAME
 description = "Implementation of the Mockito API for use on the Android Dalvik VM"
+
+apply plugin: 'java-library'
+apply from: "$rootDir/gradle/publishing.gradle"
 
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
-repositories {
-    jcenter()
+tasks.withType(JavaCompile) {
+    options.errorprone {
+        disable("StringSplitter")
+    }
 }
 
 dependencies {
+    errorprone "com.google.errorprone:error_prone_core:2.5.1"
+    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
+
     implementation project(':dexmaker')
 
-    implementation 'org.mockito:mockito-core:2.25.0', { exclude group: 'net.bytebuddy' }
+    api 'org.mockito:mockito-core:2.28.2', { exclude group: 'net.bytebuddy' }
 }
