--- a/dexmaker-mockito-tests/build.gradle
+++ b/dexmaker-mockito-tests/build.gradle
@@ -1,7 +1,19 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
+    }
+}
+
+apply plugin: "net.ltgt.errorprone"
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 28
 
     android {
         lintOptions {
@@ -11,18 +23,24 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 32
+        minSdkVersion 8
+        targetSdkVersion 28
+        versionName VERSION_NAME
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
     }
+}
+
+repositories {
+    jcenter()
+    google()
 }
 
 dependencies {
     compileOnly project(':dexmaker-mockito')
     androidTestImplementation project(':dexmaker-mockito')
 
-    implementation 'androidx.test:runner:1.4.0'
-    implementation 'junit:junit:4.13.2'
-    api 'org.mockito:mockito-core:2.28.2', { exclude group: 'net.bytebuddy' }
+    implementation 'com.android.support.test:runner:0.5'
+    implementation 'junit:junit:4.12'
+    api 'org.mockito:mockito-core:2.25.0', { exclude group: 'net.bytebuddy' }
 }
