--- a/dexmaker/build.gradle
+++ b/dexmaker/build.gradle
@@ -1,28 +1,32 @@
-plugins {
-    id("net.ltgt.errorprone") version "1.3.0"
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.13"
+    }
 }
 
-description = "A utility for doing compile or runtime code generation targeting Android's Dalvik VM"
-
+apply plugin: "net.ltgt.errorprone"
 apply plugin: 'java'
 apply from: "$rootDir/gradle/publishing.gradle"
+
+version = VERSION_NAME
+description = "A utility for doing compile or runtime code generation targeting Android's Dalvik VM"
 
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
 
-tasks.withType(JavaCompile) {
-    options.errorprone {
-        disable("StringSplitter")
-    }
+repositories {
+    jcenter()
 }
 
-javadoc {
-    options.addBooleanOption("Xdoclint:-html", true)
+tasks.withType(JavaCompile) {
+    options.compilerArgs += ["-Xep:StringSplitter:OFF"]
 }
 
 dependencies {
-    errorprone "com.google.errorprone:error_prone_core:2.5.1"
-    errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-
     implementation 'com.jakewharton.android.repackaged:dalvik-dx:9.0.0_r3'
 }
